--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
-    "dev": "npm run dev",
-    "build": "npm run build",
-    "lint": "npm run lint",
-    "preview": "npm run preview",
-    "type-check": "npm run type-check"
+    "dev": "cd lumicea-react && npm run dev",
+    "build": "cd lumicea-react && npm run build",
+    "lint": "cd lumicea-react && npm run lint",
+    "preview": "cd lumicea-react && npm run preview",
+    "type-check": "cd lumicea-react && npm run type-check"
   },
   "dependencies": {
     "lumicea-react": "file:./lumicea-react"
